--- a/index.html
+++ b/index.html
@@ -4,17 +4,12 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script type="text/javascript" src="api.js"></script>
     <link rel="stylesheet" type="text/css" href="https://developer.spotify.com/web-api/static/css/cached.css">
-    <title>Cache Web API - David Crawford</title>
+    <title>Home</title>
   </head>
   <body>
-    <div class="container">
-      <h1>Search for an Org</h1>
-      <p>Type ID and search!</p>
-      <input type="text" id="query" value="" class="form-control" placeholder="Enter something here!">
-      <button id="search" class="btn btn-primary" value="Search">Search</button>
-      <button id="login" class="btn btn-primary" value="Login">Login</button>
-      <div id="results"></div>
-    </div>
+  	<button id="loginbtn" class="btn btn-primary" value="Login">Login</button>
+  	<link rel="import" href="login.html">
+
   </body>
   <style type="text/css">
     #results {
