--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   </head>
   <body>
   	<button id="loginbtn" class="btn btn-primary" value="Login">Login</button>
+    <template id="loginpage">
   	<link rel="import" href="login.html">
-
+<template>
   </body>
   <style type="text/css">
     #results {
