--- a/login.html
+++ b/login.html
@@ -1,10 +1,1 @@
-
-  	<b>Your current token: </b>
-  	<b id="token"></b>
-  	<input type="text" id="customToken" value="" class="form-control" placeholder="Enter custom token">
-    <div class="container">
-      <h1>Login</h1>
-      <input type="text" id="loginUsername" value="" class="form-control" placeholder="Email">
-      <input type="text" id="loginPassword" value="" class="form-control" placeholder="Password">
-      <button id="login" class="btn btn-primary" value="Login">Login</button>
-    </div>
+<p>Hello</p>
