Using API for single page application.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   </head>
   <body>
   	<button id="loginbtn" class="btn btn-primary" value="Login">Login</button>
-    <template id="loginpage">
-  	<link rel="import" href="login.html">
-<template>
+    <div class="content"></div>
   </body>
   <style type="text/css">
     #results {
