--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
   	<button id="loginbtn" class="btn btn-primary" value="Login">Login</button>
-    <div class="content"></div>
+    <div id="content"></div>
   </body>
   <style type="text/css">
     #results {
